--- a/AdventOfCode2025.ipynb
+++ b/AdventOfCode2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoZvP2+ASyPhd0fzTUI8JI",
+      "authorship_tag": "ABX9TyOFzUhfRYSd3dlmPTFY7PC+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,127 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 95,
       "metadata": {
         "id": "MjsM02FsQXQ2"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "input = [i.strip() for i in open(\"input.txt\", \"r\").readlines()]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_input = \"\"\"L68\n",
+        "L30\n",
+        "R48\n",
+        "L5\n",
+        "R60\n",
+        "L55\n",
+        "L1\n",
+        "L99\n",
+        "R14\n",
+        "L82\"\"\"\n",
+        "input = [i.strip() for i in test_input.split(\"\\n\")]"
+      ],
+      "metadata": {
+        "id": "J7pxE4tsTDCO"
+      },
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = 50\n",
+        "e = 0\n",
+        "for line in input:\n",
+        "  if line[0] == \"R\":\n",
+        "    num += int(line[1:])\n",
+        "    e += num // 100\n",
+        "    num %= 100\n",
+        "\n",
+        "  elif line[0] == \"L\":\n",
+        "    num -= int(line[1:])\n",
+        "    if num < 0 and num + int(line[1:]) == 0:\n",
+        "      num += 100\n",
+        "    e += abs(num // 100)\n",
+        "    num %= 100\n",
+        "    if num == 0:\n",
+        "      e += 1\n",
+        "e"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TABbTPFrSYZe",
+        "outputId": "a2be476b-62c0-4ee0-eeb3-fcda40b829c1"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5892"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = 50\n",
+        "total = 0\n",
+        "for line in input:\n",
+        "  if line[0] == \"R\":\n",
+        "    num += int(line[1:])\n",
+        "    total += num // 100\n",
+        "    num %= 100\n",
+        "  else:\n",
+        "    num -= int(line[1:])\n",
+        "    if num < 0 and num + int(line[1:]) == 0:\n",
+        "      num += 100\n",
+        "    while num < 0:\n",
+        "      num += 100\n",
+        "      total += 1\n",
+        "    if num == 0:\n",
+        "      total += 1\n",
+        "  # print(line, num, a1 if a1 else \"\")\n",
+        "total"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UavyNm8LVTsR",
+        "outputId": "a93ffbf7-1642-4ad8-c4cd-b1d0b363ae68"
+      },
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5892"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ljHZyx-TZsyX"
+      }
     }
   ]
 }
