--- a/AdventOfCode2025.ipynb
+++ b/AdventOfCode2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFzUhfRYSd3dlmPTFY7PC+",
+      "authorship_tag": "ABX9TyOlUZUv4FH171+jeoVB4ncM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# day 1"
+      ],
+      "metadata": {
+        "id": "jTUilXZ0g2AU"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "id": "MjsM02FsQXQ2"
       },
@@ -55,7 +64,7 @@
       "metadata": {
         "id": "J7pxE4tsTDCO"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,25 +89,10 @@
         "e"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TABbTPFrSYZe",
-        "outputId": "a2be476b-62c0-4ee0-eeb3-fcda40b829c1"
+        "id": "TABbTPFrSYZe"
       },
-      "execution_count": 98,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5892"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 98
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -123,31 +117,148 @@
         "total"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UavyNm8LVTsR",
-        "outputId": "a93ffbf7-1642-4ad8-c4cd-b1d0b363ae68"
+        "id": "UavyNm8LVTsR"
       },
-      "execution_count": 99,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5892"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 99
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## What happened here?\n",
+        "\n",
+        "The code block above is my first answer, which worked for the first problem. After struggling with minor issues on the second and submitting it, I updated both code blocks to work. For the future, I'll try to make sure both solutions are available."
+      ],
       "metadata": {
         "id": "ljHZyx-TZsyX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Explanation\n",
+        "Here we go!\n",
+        "\n",
+        "The first problem is quite easy - walk through each step, find if it hits 0, and you're done!\n",
+        "\n",
+        "The second part is somewhat more annoying. You cannot simply check for a wrap-around, since a wrap around could be more than one. There's a couple approaches. There's 3 approaches here:\n",
+        "1. wind back by 100 in increments, and use those increments to figure out how many times it wrapped (my first successful attempt, see code box 2)\n",
+        "2. use modulo math to calculate the number of wraps (see first box, corrected after complete)\n",
+        "3. move one at a time, and check for zero at each step (easiest, but I didn't do it)\n",
+        "\n",
+        "Today's was pretty straightforward, apart from a bit of funkiness regarding that border 0. Lesson learned: always use logs on the test input to see if you're getting the answer the right way."
+      ],
+      "metadata": {
+        "id": "J7bwVGO4ghul"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# day 2"
+      ],
+      "metadata": {
+        "id": "8vAU2MgxbtNf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# input\n",
+        "ids = [i for i in open(\"input2.txt\").read().split(\",\")]"
+      ],
+      "metadata": {
+        "id": "Js5WChu1bugX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# test input\n",
+        "ids = \"\"\"2121212118-2121212124\"\"\".split(\",\")"
+      ],
+      "metadata": {
+        "id": "VKPW6d6vdTIM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# solution 1\n",
+        "n = 0\n",
+        "for id in ids:\n",
+        "  a, b = id.split(\"-\")\n",
+        "  for i in range(int(a), int(b) + 1):\n",
+        "    s = str(i)\n",
+        "    if s[:len(s) // 2] == s[len(s) // 2:]:\n",
+        "      n += i\n",
+        "n"
+      ],
+      "metadata": {
+        "id": "l8_ZyelOcCy5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = \"1188511890\""
+      ],
+      "metadata": {
+        "id": "wWzEJ-VwdrUN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s[:len(s) // 2] == s[len(s) // 2:]"
+      ],
+      "metadata": {
+        "id": "VQJ7YAQ_ds4N"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# solution 2\n",
+        "n = 0\n",
+        "for id in ids:\n",
+        "  a, b = id.split(\"-\")\n",
+        "  for i in range(int(a), int(b) + 1):\n",
+        "    s = str(i)\n",
+        "    for j in range(1, len(s)):\n",
+        "      if len(s) % j != 0:\n",
+        "        continue\n",
+        "      if all(s[r:r+j] == s[r+j:r+j*2] for r in range(0, len(s) - j, j)):\n",
+        "        n += i\n",
+        "        break\n",
+        "n"
+      ],
+      "metadata": {
+        "id": "4gaj6_MYecFq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Explanation\n",
+        "Today's was a little trickier, but nothing too bad. First, we had to check for each number in each range provided that was \"doubled\" (e.g. 1212), which we can find with the very convenient `s[:len(s) // 2] == s[len(s) // 2:]`. We check from the beginning to the middle (using floor division, naturally filters out odd numbers at the cost of speed).\n",
+        "\n",
+        "The second half required a few more shennanigans. It wanted to check for n repetitions, e.g. including 121212 or 33333 (which are in fact odd repetitions). This was a very unoptimized solution, and it shows (taking multiple seconds to run). But it works! Using `all`  with a generator comprehension, we can enumerate every possibility, walking through the list to check if it's equal. Yes, there is a way of doing this that doesn't involve so many slices, but this was the hack that got me through."
+      ],
+      "metadata": {
+        "id": "nVMgd0vPiPmA"
       }
     }
   ]
