--- a/AdventOfCode2025.ipynb
+++ b/AdventOfCode2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlUZUv4FH171+jeoVB4ncM",
+      "authorship_tag": "ABX9TyPYukOuSXouUaSPDgaeHR0C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -259,6 +259,125 @@
       ],
       "metadata": {
         "id": "nVMgd0vPiPmA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# day 3"
+      ],
+      "metadata": {
+        "id": "Gb9Q6rlnrslj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# input\n",
+        "nums = [i.strip() for i in open(\"input3.txt\").readlines()]\n",
+        "l = len(nums[0])"
+      ],
+      "metadata": {
+        "id": "FsHlTRx7lfz0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# test input\n",
+        "test = \"\"\"987654321111111\n",
+        "811111111111119\n",
+        "234234234234278\n",
+        "818181911112111\"\"\"\n",
+        "\n",
+        "nums = [i.strip() for i in test.split(\"\\n\")]\n",
+        "l = len(nums[0])\n",
+        "nums[0]"
+      ],
+      "metadata": {
+        "id": "P_oJSz62rKF0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# part 1\n",
+        "e = 0\n",
+        "\n",
+        "for line in nums:\n",
+        "  i = 0\n",
+        "  c = 0\n",
+        "  m = 0\n",
+        "\n",
+        "  while i < l - 1:\n",
+        "    if int(line[i]) > c:\n",
+        "      c = int(line[i])\n",
+        "      m = i\n",
+        "    i += 1\n",
+        "  e += c * 10 + max(int(char) for char in line[m + 1:])\n",
+        "e"
+      ],
+      "metadata": {
+        "id": "Ng4kMPVMljR_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# part 2\n",
+        "total = 0\n",
+        "for line in nums:\n",
+        "  add = []\n",
+        "  used = []\n",
+        "  need = 12\n",
+        "  pivot = 0\n",
+        "  while need > 0:\n",
+        "    maxn = 0\n",
+        "    at = 0\n",
+        "    for i in range(pivot, l - need + 1):\n",
+        "      if int(line[i]) > maxn:\n",
+        "        maxn = int(line[i])\n",
+        "        pivot = i + 1\n",
+        "        at = i\n",
+        "    add.append(maxn)\n",
+        "    used.append(at) # to debug when something inevitably fail\n",
+        "    need -= 1\n",
+        "  total += int(\"\".join(str(i) for i in add))\n",
+        "\n",
+        "\n",
+        "total"
+      ],
+      "metadata": {
+        "id": "r-IVGYGumi4z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Explanation\n",
+        "Pretty simple. Find the biggest number (not at the end) then find the biggest number after that for the first part. I honestly small brained this by doing some shenanigans until I simplified it and it worked.\n",
+        "\n",
+        "Part 2? Do that, but 12 times. Didn't take too long to generalize the case out a little longer, and I used real names this time, how amazing!"
+      ],
+      "metadata": {
+        "id": "GkkZiPd8rvfT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#"
+      ],
+      "metadata": {
+        "id": "ddQVU5k6rqoy"
       }
     }
   ]
