--- a/AdventOfCode2025.ipynb
+++ b/AdventOfCode2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYukOuSXouUaSPDgaeHR0C",
+      "authorship_tag": "ABX9TyN5fVZ73TP/pTkIBLdIye8w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -330,6 +330,31 @@
     {
       "cell_type": "code",
       "source": [
+        "%%timeit\n",
+        "# part 1 but better\n",
+        "e = 0\n",
+        "m = 0\n",
+        "\n",
+        "\n",
+        "for line in nums:\n",
+        "  c = \"\"\n",
+        "  for i in range(l - 1):\n",
+        "    if line[i] > c:\n",
+        "      c = line[i]\n",
+        "      m = i\n",
+        "  e += int(c) * 10 + int(max(char for char in line[m + 1:]))\n",
+        "e\n",
+        "# this is still MUCH slower than part 2's generalized solution, probably because of max() and line[m + 1:]"
+      ],
+      "metadata": {
+        "id": "cMvmFzeIy-5d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# part 2\n",
         "total = 0\n",
         "for line in nums:\n",
@@ -360,6 +385,36 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "%%timeit\n",
+        "# part 2 but simplified\n",
+        "total = 0\n",
+        "for line in nums:\n",
+        "  add = \"\"\n",
+        "  used = []\n",
+        "  need = 12\n",
+        "  pivot = 0\n",
+        "  while need:\n",
+        "    maxn = \"\"\n",
+        "    for i in range(pivot, l - need + 1):\n",
+        "      if line[i] > maxn:\n",
+        "        maxn = line[i]\n",
+        "        pivot = i + 1\n",
+        "    add += maxn\n",
+        "    need -= 1\n",
+        "  total += int(add)\n",
+        "\n",
+        "\n",
+        "total"
+      ],
+      "metadata": {
+        "id": "L8mB2mNgwP-y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Explanation\n",
@@ -369,6 +424,506 @@
       ],
       "metadata": {
         "id": "GkkZiPd8rvfT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# day 4"
+      ],
+      "metadata": {
+        "id": "KKHyv6ZOsxIe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# input 1\n",
+        "ts = [i.strip() for i in open(\"input4.txt\").readlines()]\n",
+        "ts[0]\n",
+        "l = len(ts[0])"
+      ],
+      "metadata": {
+        "id": "MLsKfJA5s1ER"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# test input\n",
+        "test = \"\"\"..@@.@@@@.\n",
+        "@@@.@.@.@@\n",
+        "@@@@@.@.@@\n",
+        "@.@@@@..@.\n",
+        "@@.@@@@.@@\n",
+        ".@@@@@@@.@\n",
+        ".@.@.@.@@@\n",
+        "@.@@@.@@@@\n",
+        ".@@@@@@@@.\n",
+        "@.@.@@@.@.\"\"\"\n",
+        "ts = [i.strip() for i in test.split(\"\\n\")]\n",
+        "ts[0]\n",
+        "l = len(ts[0])"
+      ],
+      "metadata": {
+        "id": "aO2CszzAw5RV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# part 1\n",
+        "a = 0\n",
+        "for row in range(len(ts)):\n",
+        "  for col, val in enumerate(ts[row]):\n",
+        "    if val != \"@\":\n",
+        "      continue\n",
+        "    n = 0\n",
+        "    for i in range(-1, 2):\n",
+        "      for j in range(-1, 2):\n",
+        "        if row + i < 0 or col + j < 0:\n",
+        "          continue\n",
+        "        if i == 0 and j == 0:\n",
+        "          continue\n",
+        "        try:\n",
+        "          n += (ts[row + i][col + j] == \"@\")\n",
+        "        except Exception:\n",
+        "          continue\n",
+        "    # print(n)\n",
+        "    a += n < 4\n",
+        "a"
+      ],
+      "metadata": {
+        "id": "4iiX8k1Is7bZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(ts) * len(ts[0])"
+      ],
+      "metadata": {
+        "id": "KATlBO0Swt0r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# bad code do not use\n",
+        "t = 0\n",
+        "while a:\n",
+        "  a = 0\n",
+        "  for row in range(len(ts)):\n",
+        "    for col, val in enumerate(ts[row]):\n",
+        "      if val != \"@\":\n",
+        "        continue\n",
+        "      n = 0\n",
+        "      for i in range(-1, 2):\n",
+        "        for j in range(-1, 2):\n",
+        "          if row + i < 0 or col + j < 0:\n",
+        "            continue\n",
+        "          if i == 0 and j == 0:\n",
+        "            continue\n",
+        "          try:\n",
+        "            n += (ts[row + i][col + j] == \"@\")\n",
+        "            ts[row + i][col + j] = \".\"\n",
+        "          except Exception:\n",
+        "            continue\n",
+        "    # print(n)\n",
+        "    a += n < 4\n",
+        "  t += a\n",
+        "t"
+      ],
+      "metadata": {
+        "id": "dTiyDTcLy_Gb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# input2\n",
+        "ts2 = [i.strip() for i in open(\"input4.txt\").readlines()]\n",
+        "ts2[0]\n",
+        "l = len(ts2[0])\n",
+        "\n",
+        "new = [[c == \"@\" for c in row] for row in ts2]\n",
+        "rmax = len(ts2)\n",
+        "cmax = len(ts2[0])\n"
+      ],
+      "metadata": {
+        "id": "4IwfxednzXuh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%timeit\n",
+        "newcopy = [a.copy() for a in new]\n",
+        "rmax = len(ts2)\n",
+        "cmax = len(ts2[0])\n",
+        "\n",
+        "t = 0\n",
+        "while True:\n",
+        "  a = 0\n",
+        "  for row in range(len(newcopy)):\n",
+        "    for col, val in enumerate(newcopy[row]):\n",
+        "      if not val:\n",
+        "        continue\n",
+        "      n = 0\n",
+        "      for i in range(-1, 2):\n",
+        "        for j in range(-1, 2):\n",
+        "          if row + i < 0 or col + j < 0:\n",
+        "            continue\n",
+        "          if i == 0 and j == 0:\n",
+        "            continue\n",
+        "          if row + i >= rmax or col + j >= cmax:\n",
+        "            continue\n",
+        "          n += newcopy[row + i][col + j]\n",
+        "      if n < 4:\n",
+        "        a += 1\n",
+        "        newcopy[row][col] = False\n",
+        "  t += a\n",
+        "  if a == 0:\n",
+        "    break\n",
+        "t"
+      ],
+      "metadata": {
+        "id": "Dpe7JpuT2eaZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## explanation\n",
+        "Not too bad today - all you have to do is check for neighbors in a 2D grid and see if there's less than 4. For part 2, do that in a loop until you're not getting any removed. I moved to using bools in hopes of performance gains for Part 2 (it was a logic issue). The below is an adapted example of using numpy, put in after the Advent."
+      ],
+      "metadata": {
+        "id": "R5LU4RIp3_q3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# input2\n",
+        "ts2 = [i.strip() for i in open(\"input4.txt\").readlines()]\n",
+        "ts2[0]\n",
+        "l = len(ts2[0])\n",
+        "\n",
+        "new = [[c == \"@\" for c in row] for row in ts2]\n",
+        "rmax = len(ts2)\n",
+        "cmax = len(ts2[0])\n",
+        "\n",
+        "import numpy as np\n",
+        "from scipy.signal import convolve2d\n",
+        "import cv2\n"
+      ],
+      "metadata": {
+        "id": "bBhNlAc35kjQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%timeit\n",
+        "# post advent solution, with a handful of external help\n",
+        "\n",
+        "board = np.array(new, dtype=int)\n",
+        "filter = np.array([[1, 1, 1], [1, 0, 1], [1, 1, 1]])\n",
+        "t = 0\n",
+        "\n",
+        "while True:\n",
+        "  ns = convolve2d(board, filter, mode=\"same\", boundary=\"fill\", fillvalue = 0)\n",
+        "  remove = (board == 1) & (ns < 4)\n",
+        "  count = np.sum(remove)\n",
+        "  if count == 0: break\n",
+        "\n",
+        "  t += count\n",
+        "  board[remove] = 0\n",
+        "int(t)"
+      ],
+      "metadata": {
+        "id": "2Sc8QcDv5ICw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%timeit\n",
+        "# post advent solution, with a handful of external help\n",
+        "\n",
+        "board = np.array(new, dtype=int)\n",
+        "filter = np.array([[1, 1, 1], [1, 0, 1], [1, 1, 1]], dtype=np.uint8)\n",
+        "t = 0\n",
+        "\n",
+        "while True:\n",
+        "  ns = cv2.filter2D(board, -1, filter, borderType=cv2.BORDER_CONSTANT)\n",
+        "  remove = (board == 1) & (ns < 4)\n",
+        "  count = np.sum(remove)\n",
+        "  if count == 0: break\n",
+        "\n",
+        "  t += count\n",
+        "  board[remove] = 0\n",
+        "int(t)"
+      ],
+      "metadata": {
+        "id": "WxZIaiUd6tdT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# day 5"
+      ],
+      "metadata": {
+        "id": "5D00ZPTGDWiC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# input 1\n",
+        "rawa, rawb = open(\"input5.txt\").read().split(\"\\n\\n\")\n",
+        "a = rawa.split(\"\\n\")\n",
+        "b = rawb.split(\"\\n\")"
+      ],
+      "metadata": {
+        "id": "mz7n3Hee5Mdn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a"
+      ],
+      "metadata": {
+        "id": "Ldu0pIx5-J3O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test = \"\"\"20-30\n",
+        "25-26\n",
+        "5-25\"\"\"\n",
+        "a = test.split(\"\\n\")"
+      ],
+      "metadata": {
+        "id": "3B3FMGJM7VbV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# part 1\n",
+        "t = 0\n",
+        "for i in b:\n",
+        "  if not i:\n",
+        "    continue\n",
+        "  i = int(i)\n",
+        "  is_valid = False\n",
+        "  for range in a:\n",
+        "    min, max = range.split(\"-\")\n",
+        "    if int(min) <= i <= int(max):\n",
+        "      is_valid = True\n",
+        "  if is_valid:\n",
+        "    t += 1\n",
+        "t"
+      ],
+      "metadata": {
+        "id": "PKBmlcwN4282"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# correct, but will not finish anytime soon\n",
+        "valid = set()\n",
+        "for r in a:\n",
+        "  min, max = r.split(\"-\")\n",
+        "  valid.update(range(int(min), int(max) + 1))\n",
+        "len(valid)"
+      ],
+      "metadata": {
+        "id": "NA04E-av5ZDt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# absolutely borked code\n",
+        "ranges = []\n",
+        "for r in a:\n",
+        "  if not r:\n",
+        "    continue\n",
+        "  min, max = r.split(\"-\")\n",
+        "  min = int(min)\n",
+        "  max = int(max)\n",
+        "  m = False\n",
+        "  # for valid_range in ranges:\n",
+        "  #   if min < valid_range[0] and max > valid_range[0]:\n",
+        "  #     valid_range[0] = min\n",
+        "  #     m = True\n",
+        "  #   if max > valid_range[1] and min < valid_range[1]:\n",
+        "  #     valid_range[1] = max\n",
+        "  #     m = True\n",
+        "\n",
+        "  if not m:\n",
+        "    ranges.append([min, max])\n",
+        "\n",
+        "ranges = sorted(ranges, key=lambda r: r[0])\n",
+        "\n",
+        "for v1 in ranges:\n",
+        "    if -1 in v1:\n",
+        "      continue\n",
+        "    for v2 in ranges:\n",
+        "      if v1 == v2:\n",
+        "        continue\n",
+        "      if -1 in v2:\n",
+        "        continue\n",
+        "      if v1[0] < v2[0] < v2[1] < v1[1]:\n",
+        "        v2[0] = 0\n",
+        "        v2[1] = -1\n",
+        "      if v1[1] >= v2[0] and v1[0] <= v2[1]:\n",
+        "        v1[1] = v2[1]\n",
+        "        v2[0] = 0\n",
+        "        v2[1] = -1\n",
+        "# ranges\n",
+        "sum(i[1] - i[0] + 1 for i in ranges)"
+      ],
+      "metadata": {
+        "id": "PjJ-yesr6FSD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# part 2\n",
+        "ranges = []\n",
+        "for r in a:\n",
+        "  if not r:\n",
+        "    continue\n",
+        "  min_n, max_n = r.split(\"-\")\n",
+        "  min_n = int(min_n)\n",
+        "  max_n = int(max_n)\n",
+        "  ranges.append([min_n, max_n])\n",
+        "  m = False\n",
+        "  # for valid_range in ranges:\n",
+        "  #   if min < valid_range[0] and max > valid_range[0]:\n",
+        "  #     valid_range[0] = min\n",
+        "  #     m = True\n",
+        "  #   if max > valid_range[1] and min < valid_range[1]:\n",
+        "  #     valid_range[1] = max\n",
+        "  #     m = True\n",
+        "\n",
+        "\n",
+        "\n",
+        "ranges = sorted(ranges, key=lambda r: r[0])\n",
+        "\n",
+        "merged = []\n",
+        "for v1 in ranges:\n",
+        "    if not merged or v1[0] > merged[-1][1]:\n",
+        "      merged.append(v1)\n",
+        "    else:\n",
+        "      merged[-1][1] = max(merged[-1][1], v1[1])\n",
+        "# ranges\n",
+        "sum(i[1] - i[0] + 1 for i in merged)"
+      ],
+      "metadata": {
+        "id": "Vt9lSwYqBpcJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ranges"
+      ],
+      "metadata": {
+        "id": "yTB3YDOf4oOA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# post advent\n",
+        "rawa, rawb = open(\"input5.txt\").read().split(\"\\n\\n\")\n",
+        "a = rawa.split(\"\\n\")\n",
+        "b = rawb.split(\"\\n\")\n",
+        "preprocessed_ranges = [[int(i) for i in r.split(\"-\")] for r in a]"
+      ],
+      "metadata": {
+        "id": "pOV-mFGTETvz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%timeit\n",
+        "# part 2 but cleaned up post-advent\n",
+        "ranges = sorted(preprocessed_ranges, key=lambda r: r[0])\n",
+        "\n",
+        "merged = []\n",
+        "for v1 in ranges:\n",
+        "    if not merged or v1[0] > merged[-1][1]:\n",
+        "      merged.append(v1)\n",
+        "    else:\n",
+        "      merged[-1][1] = max(merged[-1][1], v1[1])\n",
+        "\n",
+        "sum(i[1] - i[0] + 1 for i in merged)"
+      ],
+      "metadata": {
+        "id": "5Jf75aj8D64A"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## explanation\n",
+        "Part 1 was trivial. For each number, check if it's in a range.\n",
+        "\n",
+        "Part 2 was... slightly less trivial, but I somehow managed to turn it into some crazy monstrosity. I had no clue how to implement range merging (it was asking for the lengths of all). The algorithm to do so really is simple - sort em, then for each one, either add it at the end or merge into the last range. But of course, I tried to do some swapping voodoo magic which ended up horribly. Lesson learned: simplicity!"
+      ],
+      "metadata": {
+        "id": "W6KTUNtBKZ6C"
       }
     },
     {
