day 5 part 1 enhanced

--- a/AdventOfCode2025.ipynb
+++ b/AdventOfCode2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5fVZ73TP/pTkIBLdIye8w",
+      "authorship_tag": "ABX9TyO/loCyMXopaR/uthbGEowZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -757,6 +757,23 @@
       ],
       "metadata": {
         "id": "PKBmlcwN4282"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# part 1 post-advent\n",
+        "rawa, rawb = open(\"input5.txt\").read().split(\"\\n\\n\")\n",
+        "ppa = [[int(i) for i in r.split(\"-\")] for r in rawa.split(\"\\n\")]\n",
+        "ppb = [int(i) for i in rawb.split(\"\\n\") if i]\n",
+        "\n",
+        "t = sum(any(r[0] <= i <= r[1] for r in ppa) for i in ppb)\n",
+        "t"
+      ],
+      "metadata": {
+        "id": "FRC9I28hL05_"
       },
       "execution_count": null,
       "outputs": []
