--- a/AdventOfCode2025.ipynb
+++ b/AdventOfCode2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/loCyMXopaR/uthbGEowZ",
+      "authorship_tag": "ABX9TyMXO1z+JgyRn6rL1vdxAuPi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -941,6 +941,154 @@
       ],
       "metadata": {
         "id": "W6KTUNtBKZ6C"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# day 6"
+      ],
+      "metadata": {
+        "id": "m-k_MavuB_As"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# input 1\n",
+        "raw = [line.rstrip() for line in open(\"input6.txt\")]\n",
+        "irawi = raw[-1]\n",
+        "symbols = [s for s in raw[-1].split(\" \") if s]\n",
+        "raw = raw[:-1]\n",
+        "ncount = len([i for i in raw[0].split(\" \") if i])\n",
+        "rows = [[int(i) for i in line.split(\" \") if i] for line in raw]"
+      ],
+      "metadata": {
+        "id": "FsX773dOB_vY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# part 1\n",
+        "from functools import reduce\n",
+        "s = 0\n",
+        "for i in range(ncount):\n",
+        "  op = symbols[i]\n",
+        "  s += reduce(lambda a, b: a * b if op == \"*\" else a + b, (row[i] for row in rows))\n",
+        "s\n"
+      ],
+      "metadata": {
+        "id": "JqaZlhxRCRtk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# test\n",
+        "test = \"\"\"\n",
+        "123 328  51 64\n",
+        " 45 64  387 23\n",
+        "  6 98  215 314\n",
+        "*   +   *   +  \"\"\"[1:]\n",
+        "raw = test.split(\"\\n\")\n",
+        "irawi = raw[-1]\n",
+        "symbols = [s for s in raw[-1].split(\" \") if s]\n",
+        "raw = raw[:-1]\n",
+        "ncount = len([i for i in raw[0].split(\" \") if i])\n",
+        "rows = [[int(i) for i in line.split(\" \") if i] for line in raw]"
+      ],
+      "metadata": {
+        "id": "3_Mvt2fxFBhf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "raw"
+      ],
+      "metadata": {
+        "id": "_CCDiNkXIYSK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# part 2 preprocessing\n",
+        "symindexes = []\n",
+        "for i, char in enumerate(irawi):\n",
+        "  if char != \" \":\n",
+        "    symindexes.append(i)\n",
+        "\n",
+        "symindexes.append(len(raw[0]))\n",
+        "\n",
+        "newnums = []\n",
+        "for row in raw:\n",
+        "  prev = 0\n",
+        "  newnumsub = []\n",
+        "  for index in symindexes[1:]:\n",
+        "    newnumsub.append(row[prev:index if index == len(raw[0]) else index -1])\n",
+        "    prev = index\n",
+        "  newnums.append(newnumsub)\n"
+      ],
+      "metadata": {
+        "id": "KCObXd7HHNB4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[i[:5] for i in newnums[:5]]"
+      ],
+      "metadata": {
+        "id": "bJMkiqIYLX9_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# part 2\n",
+        "t = 0\n",
+        "for i in range(ncount):\n",
+        "  longest = 0\n",
+        "  numpad = [row[i] for row in newnums]\n",
+        "  longest = max(len(n) for n in numpad)\n",
+        "  nums = []\n",
+        "  for p in range(longest):\n",
+        "    nums.append(int(\"\".join([n[p] for n in numpad if len(n) > p])))\n",
+        "  t += reduce(lambda a, b: a * b if symbols[i] == \"*\" else a + b, nums)\n",
+        "t"
+      ],
+      "metadata": {
+        "id": "M_d9qPiaDf55"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## explanation\n",
+        "Today was the worst one so far. Part 1 was easy. Add/multiply the numbers in each column.\n",
+        "\n",
+        "For part 2, my algorithm worked ~20-30 minutes in, but I didn't realize the difference in behavior. `.readlines()` preserves newlines, but `.split(\"\\n\")` does not. That cost me *thirty whole minutes!*\n",
+        "\n",
+        "I'm a bit miffed after this whole ordeal."
+      ],
+      "metadata": {
+        "id": "-TCJLQTyPwl6"
       }
     },
     {
